# ara-cli

./: .gitmodules  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  TODOS.md
.github/workflows/: ci.yml
crates/ara-cli/: Cargo.toml
crates/ara-cli/assets/: viewer.source-hash
crates/ara-cli/assets/viewer/: ara-viewer-2edbd26a00693d10.js  ara-viewer-2edbd26a00693d10_bg.wasm  ara-viewer-3bf9bf0b0ec1c588.js  ara-viewer-3bf9bf0b0ec1c588_bg.wasm  ara-viewer-62267673b98a1a43.js  ara-viewer-62267673b98a1a43_bg.wasm  ara-viewer-af2de5e6fa78c1dd.js  ara-viewer-af2de5e6fa78c1dd_bg.wasm  ara-viewer-bc7bd327eeb250c7.js  ara-viewer-bc7bd327eeb250c7_bg.wasm  ara-viewer-e043161709048722.js  ara-viewer-e043161709048722_bg.wasm  index.html
crates/ara-cli/src/serve/: cache.rs  hub.rs  mod.rs
crates/ara-core/: Cargo.toml
crates/ara-core/src/: lib.rs  lint.rs  paper.rs  parse.rs  sections.rs
crates/ara-core/tests/: parse_fixtures.rs
crates/ara-core/tests/fixtures/corpus/: SOURCE.md
crates/ara-core/tests/snapshots/: parse_fixtures__self_composing_policies_manifest.snap
crates/ara-viewer/: Cargo.toml  index.html
crates/ara-viewer/public/: styles.css
crates/ara-viewer/src/: detail.rs  lib.rs  main.rs  replay.rs  scene.rs  splitter.rs  tree.rs
crates/ara-viewer/tests/: web.rs
docs/: ara-format-feedback.md
plans/: ara-runtime-impl-plan.md  hub-parity-full.md  issue-7-tree-list-mode.md  stage-0-ci-tooling.md  stage-1-core-parse-validate.md  stage-5-hub-deploy.md
scripts/: embed-viewer.sh  vendor-corpus.sh
(+12 files in other folders)
