[package]
name = "ara-viewer"
description = "ARA Viewer — Leptos CSR web app for browsing ARA research manifests."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[[bin]]
name = "ara-viewer"
path = "src/main.rs"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
console_error_panic_hook = "0.1"
ara-core = { path = "../ara-core", version = "0.0.4", default-features = false }
# serde_json is cross-platform: used by parse_manifest (native tests + wasm).
serde_json = "1"

# Browser-only networking deps.  Gated to wasm32 so `cargo test --workspace`
# (which builds for the native host) continues to compile without a browser.
[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = { version = "0.6", features = ["http"] }
wasm-bindgen-futures = "0.4"
